--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
                     <li>ほげほげ</li>
                     <li>ほにゃらら</li>
                 </ol>
+                
+                <br>
+                <br>
+                <h1>練習問題2.3</h1>
+                <br>
                 <dl>
                 <dt>作者</dt>
                 <dd>ジョン</dd>
@@ -41,5 +46,38 @@
                 <dt>それ以外の場合</dt>
                 <dd>ポイントは加算されません。</dd>
                 </dl> 
+                <br>
+                <br>
+                <h1>練習問題2.4<h1>
+                <br>
+                <table>
+                <caption>
+                <strong>お寿司をどこで食べるか？その長所と短所</strong>
+                <details>
+                <summary>このテーブルの説明</summary>
+                <p>以下のテーブルでは、２番目のカラムに寿司店のタイプが入れられています。その左側にその様なタイプのお店でお寿司を食べる場合の長所が、右側に入れられています。</p>
+                </details>
+                </caption>
+                <thead>
+                <tr><th>長所</th><th>どこで食べるか</th><th>短所</th></tr>
+                </thead>
+                <tbody>
+                <tr><td>ネタにこだわり、技術が素晴らしい</td><th>銀座の高級店
+                </th><td>値段が時価で不安、予約が必要</td></tr>
+                <tr><td>値段が良心的、気軽に手に取れる</td><th>回転寿司
+                </th><td>ネタが解凍もの、休みの日は混む</td></tr>
+                </tbody>
+                </table>
+                <table>
+                <caption>
+                <strong>お寿司をどこで食べるか？その長所と短所</strong>
+                </caption>
+                </thead>
+                <tbody>
+                <tr><th>銀座の高級店</th><td>ネタにこだわり、技術が素晴らしい</td><td>値段が直で不安、予約が必要</td></tr>
+                <tr><th>回転寿司</th><td>値段が良心的、気軽に手にとれる
+                </td><td>ネタが解答もの、休みの日は混む</td><tr>
+                </tbody>
+                </table>
             </body>
             </html>
