--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                 </dl> 
                 <br>
                 <br>
-                <h1>練習問題2.4<h1>
-                <br>
+                <h1>練習問題2.4</h1>
                 <table>
                 <caption>
                 <strong>お寿司をどこで食べるか？その長所と短所</strong>
