--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>練習問題2.6</title>
 </head>
             <body>
+                <p>テキスト入力
                 <!--文字の大きさの練習-->
                 <h1>練習問題2.2</h1>
                 <h1>Hello World</h1>
@@ -89,5 +90,6 @@
                             <bdo dir="rtl">昔の日本語は右から左に書いていました。</bdo></p>
                     </li>
                     </ul>
+    
             </body>
             </html>
