--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
                             <bdo dir="rtl">昔の日本語は右から左に書いていました。</bdo></p>
                     </li>
                     </ul>
+    <form action="xxx.php" method="post"><label>メール(type="email"):<input type="email"name="email"></label>
+        <input type="submit" value="送信"></form>
     
+    <br>
+    <form action="xxx.php" method="post"><label>URL(type="url"):<input type="url" name="url"></label>
+        <input type="submit" value="送信"></form>
+    <form action="xxx.php" method="post"><label>検索(type="search"):<input type="search"name="search"></label>
+        <input type="submit" value="送信"></form>
+    <input type="submit value=送信
+        <input type="submit" value="送信"></form>
+    <form action="xxx.php" method="post"><label>電話(type="telephone"):input type="tel"name="tel"></label>
+        <input type="submit"value="送信"></form>
             </body>
             </html>
