--- a/index.html
+++ b/index.html
@@ -100,26 +100,26 @@
     <br><br>
     <form action="xxx.php" method="post"><label>URL(type="url"):<input type="url" name="url"></label>
         <input type="submit" value="送信"></form>
-    <form action="xxx.php" method="post"><label>検索(type="search"):<input type="search"name="search"></label>
+    <form action="xxx.php" method="post"><label>検索(type="search"):<input type="search" name="search"></label>
         <input type="submit" value="送信"></form>
-    <form action="xxx.php" method="post"><label>電話(type="telephone"):input type="tel"name="tel"></label>
+    <form action="xxx.php" method="post"><label>電話(type="telephone"):input type="tel" name="tel"></label>
         <input type="submit" value="送信"></form>
-    <form action="xxx.php" method="post"><label>数値(type="number"):<input type="number"name="number"></label>
+    <form action="xxx.php" method="post"><label>数値(type="number"):<input type="number" name="number"></label>
         <input type="submit" value="送信"></form>
-    <form action="xxx.php" method="post"><label>日付(type="date"):<input type="date"name="date"></label>
+    <form action="xxx.php" method="post"><label>日付(type="date"):<input type="date" name="date"></label>
         <input type="submit" value="送信"></form>
-    <form action="xxx.php" method="post"><label>ローカル日時(type="datetime-local"):<input type="datetime-local"name="datetime-local"></label>
+    <form action="xxx.php" method="post"><label>ローカル日時(type="datetime-local"):<input type="datetime-local" name="datetime-local"></label>
         <input type="submit" value="送信"></form>
-    <form action="xxx.php" method="post"><label>月(type="month"):<input type="month"name="month"></label>
+    <form action="xxx.php" method="post"><label>月(type="month"):<input type="month" name="month"></label>
         <input type="submit" value="送信"></form>
-    <form action="xxx.php" method="post"><label>週(type="week):<input type="week"name="week"></label>
+    <form action="xxx.php" method="post"><label>週(type="week):<input type="week" name="week"></label>
         <input type="submit" value="送信"></form>
-    <form action="xxx.php" method="post"><label>時間(type="time"):<input type="time"name="time"></label>
+    <form action="xxx.php" method="post"><label>時間(type="time"):<input type="time" name="time"></label>
         <input type="submit" value="送信"></form>
-    <form action="xxx.php" method="post"><label>レンジ(type="range"):<input type="range"name="range"></label>
-        <input type="submit value="送信"></form>
-    <form action="xxx.php" method="post"><label>色(type="color"):<input type="color"name=color"></label>
-        <input type="submit value="送信"></form>
+    <form action="xxx.php" method="post"><label>レンジ(type="range"):<input type="range" name="range"></label>
+        <input type="submit" value="送信"></form>
+    <form action="xxx.php" method="post"><label>色(type="color"):<input type="color" name=color"></label>
+        <input type="submit" value="送信"></form>
     <br><br>
     <h1>練習問題2.8</h1>
     <br><br>
