--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     </dl>
                 
     <dl>
-    <dtlang="ja"><dfn>色</dfn></dt>
-    <dtlang="en-US"><dfn>color</dfn></dt>
-    <dtlang="en-GB"><dfn>colour</dfn></dt><dd>可視光線の波長の長短によって人が視覚で感じ分けられる色覚・色刺激のこと。</dd>
+    <dtlang="ja"><dfn>色</dfn>
+    </dt><dtlang="en-US"><dfn>color</dfn>
+    </dt><dtlang="en-GB"><dfn>color</dfn>
+    </dt><dd>可視光線の波長の長短によって人が視覚で感じ分けられる色覚・色刺激のこと。</dd>
     </dl> 
     <p>ゲームの得点は以下の順序で計算されます。
     </p>
