--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang-”ja”>
  <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>練習問題2.6</title>
 </head>
     <body>
