--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>練習問題2.6</title>
 </head>
     <body>
+    <h1>練習問題2.1</h1>
     <p>テキスト入力:<input type="text"></p>
     <!--文字の大きさの練習-->
     <h1>練習問題2.2</h1>
