--- a/index.html
+++ b/index.html
@@ -140,5 +140,10 @@
     <label><input type="checkbox" name="kamoku" value="taiiku">体育</label></p>
     <p><label>宿題ファイル：<input type="file" name="syukudai"></label></p>
     <p><input type="submit" value="送信"><input type="reset" value="リセット"></p><br>
+     
+    <a href=“a.html”>相対パスでリンクします</a><br>
+    <a href=https://www.josai.ac.jp/management/>絶対パスで城西大学経営学部へリンクします。</a><br>
+    <a href=“mailto:zm99999@josai.ac.jp”>自分宛メール（自分のメールアドレスを入力）</a><br>
+    <a href=“https://www.josai.ac.jp/management/”><imgsrc=“./image/keiei_small.jpg” alt=“城西大学経営学部"></a>
     </body>
 </html>
